[package]
name = "yourgpu"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Motivation Software Inc."]
description = "Simple GPU abstraction built on top of WGPU"
repository = "https://github.com/motivation-inc/yourgpu"

[dependencies]
bytemuck = "1.25.0"
pollster = "0.4.0"
tokio = "1.50.0"
wgpu = "28.0.0"
winit = "0.30.13"
